# ferex2

./: .gitignore  FERS_SPEC.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/: monte-carlo-worker.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  rob.json  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: database.rs  main.rs
src/components/: FormComponents.tsx  FormField.tsx  ScenarioFileManager.tsx  ScenarioManager.tsx  ServicePeriodManager.tsx  SocialSecurityManagerRHF.tsx  TSPManager.tsx  TSPManagerRHF.tsx
src/lib/: calculations.ts  scenarioStorage.ts  serviceCalculations.ts  useMonteCarloSimulation.ts  useScenarioManager.ts  validation.ts
src/pages/: Comparison.tsx  Dashboard.tsx  Results.tsx  ScenarioBuilder.tsx
src/schemas/: index.ts
src/types/: index.ts
